# bazel-installable-cc

./: .bazelrc  .gitignore  BUILD  BUILD.tpl  MODULE.bazel  README.md  WORKSPACE  bazel-bazel-base-project  bazel-bazel-installable-cc  initialization.bzl  makefile
bazel/: dependencies.bzl
bazel/toolchain/: BUILD  initialization.bzl  install-toolchain.sh  manifest.text  toolchain-manifest.text  toolchain_common.bzl  toolchain_config.bzl  toolchain_flags.bzl
config/suppressions/: tsan.supp
doc/: build.sh  doxy.config
example/: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  makefile
example-project/: BUILD  README.md  WORKSPACE.bak
example-project/bazel/toolchain/: install-toolchain.sh
example-project/src/: main.cc
example/config/: toolchain_config.bzl  toolchain_flags.bzl
example/config/suppressions/: BUILD  lsan.supp
example/src/: .main.cc.swp  BUILD  BUILD.bazel  macro_test.bzl  main.cc  some_lib.cc  some_lib.h
example/tools/: print_output_base.sh
example/tools/lint/: refresh.sh  targets.bzl
internal/: BUILD.tpl  clang_format.bzl  clang_tidy.bzl  common.bzl  compile_commands.bzl  defs.bzl  make_makefile.bzl  toolchain_common.bzl
src/: BUILD.tpl  toolchain_common.bzl
src/bazel_testing/: BUILD  some_lib.cc
tools/target_lists/: refresh.sh  targets.bzl
