load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

exports_files([
    ".clang-format",
    ".clang-tidy",
])

# -- Buildifier

buildifier(
    name = "buildifier_check",
    # exclude_patterns = ["glob-pattern", ...]
    lint_mode = "warn",
    verbose = False,
)

buildifier(
    name = "buildifier_fix",
    # exclude_patterns = ["glob-pattern", ...]
    lint_mode = "fix",
    verbose = True,
)

# -- Clang Format
# These rules are an EXAMPLE, and not used by the `tools/run_clang_format.sh` script
filegroup(
    name = "clang_format_config",
    srcs = [".clang-format"],
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_format_bin",
    actual = "@initialize_toolchain//:clang_format_bin",
    visibility = ["//visibility:public"],
)

# -- Clang Tidy

filegroup(
    name = "clang_tidy_config",
    srcs = [".clang-tidy"],
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_tidy_bin",  # Pass through to whatever clang-tidy is installed
    actual = "@initialize_toolchain//:clang_tidy_bin",
    visibility = ["//visibility:public"],
)
